--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,6 +13,7 @@
         "userTitle":"Users",
         "newUserBtn":"New User",
         "category": "User Category",
-        "dob": "DOB"
+        "dob": "DOB",
+        "schoolName": "School Name"
     }
 }
